[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/Flood.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SmallCrab.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/pearl.png" type="Texture" id=3]
[ext_resource path="res://Scenes/CoconutTree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=8]
[ext_resource path="res://assets/beach-sea-water-light.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Wave.gd" type="Script" id=10]
[ext_resource path="res://Enemy/Scenes/SimpleEnemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemy/Scenes/EnemySpeedy.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Pearl.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/beach-sea-water-dark.png" type="Texture" id=15]
[ext_resource path="res://assets/beach-sand.png" type="Texture" id=16]
[ext_resource path="res://assets/Roboto-Black.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Enemy/Scenes/EnemyTank.tscn" type="PackedScene" id=18]
[ext_resource path="res://Enemy/Scenes/EnemyDigger.tscn" type="PackedScene" id=19]
[ext_resource path="res://Enemy/Scenes/EnemyHooker.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/Crab.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=2]
resource_name = "start_wave"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.001, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 600 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.407843, 0.305882, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.937255, 0.792157, 0.0313726, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.333333, 0.415686, 0.4, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.243137 )
shadow_size = 20
anti_aliasing_size = 3

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=7]
resource_name = "game_over"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 145, -550.045 ), Vector2( 145, 53.5 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1042.27, 12.6692 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 42.6039, 322.266 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
pearl_scene = ExtResource( 14 )
enemy_scenes = [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 11 ) ]
small_crab_scene = ExtResource( 2 )

[node name="Wave" type="Node" parent="."]
script = ExtResource( 10 )

[node name="SpawnEnemyTimer" type="Timer" parent="Wave"]
wait_time = 0.001
one_shot = true

[node name="NextWaveCounter" type="Timer" parent="Wave"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Background" type="Node2D" parent="."]
position = Vector2( -11.688, 40.9084 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="beach-sand" type="Sprite" parent="Background"]
position = Vector2( 546.391, 261.85 )
scale = Vector2( 0.913635, 0.913635 )
texture = ExtResource( 16 )

[node name="beach-sea-water-light" type="Sprite" parent="Background"]
position = Vector2( 592.089, 266.611 )
scale = Vector2( 0.913635, 0.913635 )
texture = ExtResource( 9 )

[node name="beach-sea-water-dark" type="Sprite" parent="Background"]
position = Vector2( 668.583, 269.687 )
scale = Vector2( 0.913635, 0.913635 )
texture = ExtResource( 15 )

[node name="CoconutTree" parent="." instance=ExtResource( 4 )]
position = Vector2( 515.835, 98.5085 )
base_drop_interval = 7.0

[node name="CoconutTree2" parent="." instance=ExtResource( 4 )]
position = Vector2( 695.925, 226.307 )
base_drop_interval = 7.0

[node name="PearlContainer" type="Position2D" parent="."]
position = Vector2( 866.934, 121.122 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemies" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 21 )]
position = Vector2( 769.86, 291.136 )
attack_cooldown = 0.35
penetration_power = 4

[node name="HUD" type="Node" parent="."]
script = ExtResource( 8 )

[node name="StartWave" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -445.2
margin_bottom = -445.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/StartWave"]
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wave X  Start"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/StartWave"]
anims/start_wave = SubResource( 2 )

[node name="Counter" type="HBoxContainer" parent="HUD"]
margin_right = 184.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PearlCount" type="MarginContainer" parent="HUD/Counter"]
margin_right = 89.0
margin_bottom = 66.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD/Counter/PearlCount"]
margin_left = 10.0
margin_top = 10.0
margin_right = 89.0
margin_bottom = 66.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Counter/PearlCount/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Counter/PearlCount/PanelContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HUD/Counter/PearlCount/PanelContainer/HBoxContainer"]
margin_left = 54.0
margin_top = 6.0
margin_right = 73.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="SmallCrabCount" type="MarginContainer" parent="HUD/Counter"]
margin_left = 93.0
margin_right = 152.0
margin_bottom = 66.0
custom_constants/margin_top = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD/Counter/SmallCrabCount"]
margin_top = 10.0
margin_right = 59.0
margin_bottom = 66.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Counter/SmallCrabCount/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Counter/SmallCrabCount/PanelContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 4
texture = ExtResource( 22 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HUD/Counter/SmallCrabCount/PanelContainer/HBoxContainer"]
margin_left = 34.0
margin_top = 6.0
margin_right = 53.0
margin_bottom = 44.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="GameOverPanel" type="Panel" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -850.045
margin_right = 367.0
margin_bottom = -357.045
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/GameOverPanel"]
anchor_right = 1.0
margin_top = 74.2027
margin_bottom = 131.203
custom_fonts/font = SubResource( 6 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -288.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenuButton" type="Button" parent="HUD/GameOverPanel/VBoxContainer"]
margin_left = 316.0
margin_right = 417.0
margin_bottom = 20.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Back To Menu"

[node name="RestartButton" type="Button" parent="HUD/GameOverPanel/VBoxContainer"]
margin_left = 338.0
margin_top = 50.0
margin_right = 395.0
margin_bottom = 70.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
anims/game_over = SubResource( 7 )

[node name="ExitButton" type="Button" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -44.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.776471, 0.423529, 0.00784314, 1 )
custom_colors/font_color_pressed = Color( 0.576471, 0.313726, 0, 1 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flood" parent="." instance=ExtResource( 1 )]

[node name="CoconutWall" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="StaticBody2D" parent="CoconutWall"]
collision_layer = 16
collision_mask = 0

[node name="NorthWall" type="CollisionShape2D" parent="CoconutWall/Area2D"]
position = Vector2( 0, -10 )
shape = SubResource( 9 )

[node name="SouthWall" type="CollisionShape2D" parent="CoconutWall/Area2D"]
position = Vector2( 0, 610 )
shape = SubResource( 9 )

[node name="EastWall" type="CollisionShape2D" parent="CoconutWall/Area2D"]
position = Vector2( 1065.57, 310.175 )
shape = SubResource( 10 )
[connection signal="game_over" from="." to="Wave" method="_on_Game_game_over"]
[connection signal="wave_clear" from="Wave" to="." method="_on_Wave_wave_clear"]
[connection signal="timeout" from="Wave/NextWaveCounter" to="." method="_on_NextWaveCounter_timeout"]
[connection signal="pressed" from="HUD/GameOverPanel/VBoxContainer/BackToMenuButton" to="HUD" method="_on_BackToMenuButton_pressed"]
[connection signal="pressed" from="HUD/GameOverPanel/VBoxContainer/RestartButton" to="HUD" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="HUD/ExitButton" to="HUD" method="_on_ExitButton_pressed"]
